<resources>
    <string name="app_name">FlashLight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_enable">Enable</string>
    <string name="action_ok_got_it">OK, Got it</string>
    <string name="action_ok_buy_now">OK, buy now</string>
    <string name="action_later">Later</string>
    <string name="action_no_thanks">No, thanks</string>

    <string name="msg_exit_app">Do you want to leave app?</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_alert_storage_permission_denied">Access storage Denied! The application requires access storage to write some data.</string>
    <string name="msg_restart_to_change_config">App will restart now to apply language changed</string>

    <string name="lbl_developer">Developer</string>
    <string name="lbl_report">Report problem</string>
    <string name="lbl_rate_me_five_stars">Rate us 5 stars</string>
    <string name="lbl_more_apps">More apps</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_share_app">Share app</string>
    <string name="lbl_promotion_ads">Promotion Ads</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_report_problem">Report problems for</string>
    <string name="lbl_report_problem_with">Report problems with</string>
    <string name="lbl_exit_app_cb">Never ask again</string>
    <string name="lbl_auto">Auto</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_select_language">Select Language</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_general">General</string>
    <string name="lbl_get_pro_version">Get pro version</string>
    <string name="lbl_enable_auto_start">Enable auto-start</string>
    <string name="lbl_enable_auto_start_content">Auto-start manager in Settings in your device will prevent apps from running in background. You should give this permission for Weather app can run in background.</string>
    <string name="lbl_enable_start_in_background">Start in background in Settings in your device will prevent apps open window setting in background. You should give this permission to this application work normal.</string>
    <string name="lbl_other_permissions">Other permissions</string>
    <string name="lbl_get_pro_version_title">Buy a professional version to remove ads and motivate us to work hard to improve the product better.</string>
    <string name="msg_empty_data">No data!</string>
    <string name="lbl_history">History</string>
    <string name="camera_error">Camera Error</string>
    <string name="brightness">"Screen brightness "</string>
    <string name="close">Close</string>

</resources>
